Test Tubes: Notes. Extraction. Multi-letter. Multi-letter can be fixed-spacing

--- a/23/Css/Fonts20.css
+++ b/23/Css/Fonts20.css
@@ -24,6 +24,12 @@
   color: #ff0099;
 }
 
+.extracted {
+  font-family: 'Kalam', cursive;
+  font-size: 20pt;
+  color: #ff0099;
+}
+
 #extracted .letter-input {
   font-family: 'Kalam', cursive;
   font-size: 20pt;
