--- a/Css/TextInput.css
+++ b/Css/TextInput.css
@@ -154,6 +154,14 @@ input[type=number]::-webkit-outer-spin-button {
   position: relative;
 }
 
+.notes-left {
+  position: relative;
+}
+
+.notes-right {
+  position: relative;
+}
+
 .note-input {
   display: none;
   height: 0.28in;
@@ -179,6 +187,12 @@ input[type=number]::-webkit-outer-spin-button {
   width: 100%;
   left: 0px;
   text-align: center;
+}
+
+.note-right {
+  position: absolute;
+  right: -1in;
+  width: 1in;
 }
 
 .enable-notes .note-input {
